--- a/.travis.yml
+++ b/.travis.yml
@@ -8,16 +8,22 @@ branches:
   only:
     - master
 
+dist: trusty
+
+cache:
+  directories:
+    - node_modules
+
 before_script:
   - npm install -g firebase-tools
   - npm install -g @angular/cli
 
 script:
-  - ng build --prod
+  - ng build -prod -aot
 
 after_success:
   - firebase deploy --token $FIREBASE_TOKEN
 
 notifications: 
- slack:
+    slack: lhasau:wnj03GlXRvb8RWLuNBTlreju
     on_success: always
